# DANE

./: Anchor.toml  README.md  package-lock.json  package.json
app/src/: index.ts
client/: client.ts
community_program/: Anchor.toml
community_program/programs/community_program/: Cargo.toml
community_program/programs/community_program/src/: lib.rs
community_program/src/: lib.rs
dane_program/: Anchor.toml
dane_program/programs/dane_program/: Cargo.toml
dane_program/programs/dane_program/src/: lib.rs
dane_program/src/: lib.rs
programs/dane/: Cargo.toml
programs/dane/src/: lib.rs
programs/dane_energy_tracking/: Cargo.toml
programs/dane_energy_tracking/src/: lib.rs
tests/: dane.ts  dane_energy_tracking.ts
